I4PTX5: Fix some tomcat version compilation failure and add test case